implement inheritance (not working yet)